--- a/dev/scss/components/_hero.scss
+++ b/dev/scss/components/_hero.scss
@@ -2,6 +2,7 @@
     overflow: hidden;
     background: url('../img/kuroshio.png') no-repeat center;
     background-size: cover;
+    height: 720px;
 
     &__video {
         object-fit: cover;
