--- a/dev/scss/components/_layout.scss
+++ b/dev/scss/components/_layout.scss
@@ -15,6 +15,10 @@
         display: flex;
         flex: 1;
         flex-direction: column;
+
+        @media ($SMALL_BELOW) {
+            flex: 1 0 90%;
+        }
     }
 
     &--fs {
@@ -45,6 +49,10 @@
     &__item {
         display: flex;
         flex: 1;
+
+        @media ($SMALL_BELOW) {
+            flex: 1 0 90%;
+        }
     }
 
     &--grow {
