--- a/dev/scss/components/_section.scss
+++ b/dev/scss/components/_section.scss
@@ -342,14 +342,27 @@ $black-border: 2px solid #000;
     }
 }
 
-footer {
+.footer {
+    position: relative;
     width: 100%;
     padding: 3rem 0;
     background-color: rgba(0,0,0,.8);
     color: #fff;
 
-    .scum {
-        align-self: flex-end;
+    &__content {
+        margin: auto;
+        width: 75%;
+
+        @media ($SMALL_BELOW) {
+            margin: 2rem auto;
+            width: 90%;
+        }
+    }
+
+    &__scum {
+        position: absolute;
+        bottom: 0;
+        right: 0;
     }
 
 }
