--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -15,6 +15,11 @@
 	top: 0;
 	left: 0;
 
+	@media ($SMALL_BELOW) {
+		justify-content: center;
+		background: rgba(0, 0, 0, .8);
+	}
+
 	&__items {
 		display: flex;
 		flex: 0 1 auto;
@@ -24,7 +29,8 @@
 		transition: .5s all linear;
 
 		@media ($MEDIUM_BELOW) {
-            width: 100%;
+            width: 90%;
+            margin: 1rem;
         }
 	}
 
@@ -36,6 +42,10 @@
 		.nav {
 			&__items {
 				width: 75%;
+
+				@media ($SMALL_BELOW) {
+			        width: 90%;
+			    }
 			}
 		}
 	}
