Gulp autoprefixer and layout changes for safari.

--- a/dev/scss/components/_layout.scss
+++ b/dev/scss/components/_layout.scss
@@ -2,7 +2,6 @@
     display: flex;
     margin: 0;
     padding: 0;
-    /*flex-shrink: 0;*/
 
     /* parent behaviors */
     &__row {
@@ -17,7 +16,8 @@
         flex-flow: column wrap;
 
         @media ($SMALL_BELOW) {
-            flex: 1 0 90%;
+            flex: 1 0 auto;
+            max-width: 100%;
         }
     }
 
@@ -51,7 +51,7 @@
         flex: 1;
 
         @media ($SMALL_BELOW) {
-            flex: 1 0 90%;
+            flex: 1 0 auto;
         }
     }
 
