--- a/dev/scss/components/_hero.scss
+++ b/dev/scss/components/_hero.scss
@@ -1,3 +1,5 @@
+@import "media-queries";
+
 .hero {
     overflow: hidden;
     background: url('../img/kuroshio.png') no-repeat center;
@@ -17,6 +19,11 @@
         z-index: 50;
         top: 30%;
         left: 30%;
+
+        @media ($SMALL_BELOW) {
+            left: 25%;
+        }
+
         p {
             color: #fff;
             line-height: 1.75em;
