--- a/dev/scss/components/_section.scss
+++ b/dev/scss/components/_section.scss
@@ -133,6 +133,10 @@ $black-border: 2px solid #000;
             @media ($LARGE_BELOW) {
                 font-size: 3rem;
             }
+
+            @media ($SMALL_BELOW) {
+                flex: 1 !important;
+            }
         }
 
         &__underline {
@@ -196,6 +200,8 @@ $black-border: 2px solid #000;
     &__container {
         align-self: stretch;
         justify-content: center;
+        flex: 1;
+        max-width: 100%;
     }
 
     &__item {
@@ -212,6 +218,7 @@ $black-border: 2px solid #000;
 
         @media ($SMALL_BELOW) {
             flex: 1 0 100%;
+            max-width: 100%;
         }
 
         &:hover {
@@ -235,6 +242,7 @@ $black-border: 2px solid #000;
 
     &__image {
         height: 300px;
+        max-width: 100%;
         opacity: 0;
         -webkit-transition: opacity 0.35s;
         transition: opacity 0.35s;
@@ -298,21 +306,23 @@ $black-border: 2px solid #000;
 
     &__list {
         border-left: $black-border;
+
+        .fa-ul {
+            @media ($SMALL_BELOW) {
+                flex: 1;
+                margin: 1rem 2rem;
+            }
+        }
     }
 
     &__year {
         max-height: 1rem;
         align-self: center;
-        -webkit-transform: rotate(270deg);
-        -moz-transform: rotate(270deg);
-        -o-transform: rotate(270deg);
         transform: rotate(270deg);
 
         @media ($SMALL_BELOW) {
             margin-left: 2.14285714em;
-            -webkit-transform: rotate(0deg);
-            -moz-transform: rotate(0deg);
-            -o-transform: rotate(0deg);
+            width: 100%;
             transform: rotate(0deg);
         }
     }
