--- a/dev/scss/components/_hero.scss
+++ b/dev/scss/components/_hero.scss
@@ -2,9 +2,20 @@
 
 .hero {
     overflow: hidden;
+    position: relative;
     background: url('../img/kuroshio.png') no-repeat center;
     background-size: cover;
     height: 720px;
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0,0,0,0.15);
+        width: 100%;
+        height: 720px;
+    }
 
     &__video {
         object-fit: cover;
