--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -1,5 +1,11 @@
+@import 'helpers/media-queries';
+@import 'helpers/constants';
+@import 'helpers/typography';
+@import 'helpers/layout';
+
+@import 'components/reset';
 @import 'components/hero';
 @import 'components/navigation';
 @import 'components/global';
 @import 'components/section';
-@import 'components/layout';
+
