--- a/dev/scss/components/_hero.scss
+++ b/dev/scss/components/_hero.scss
@@ -1,9 +1,6 @@
-@import "media-queries";
-
 .hero {
     overflow: hidden;
     position: relative;
-    background: url('../img/kuroshio.png') no-repeat center;
     background-size: cover;
     height: 720px;
 
@@ -12,9 +9,16 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-color: rgba(0,0,0,0.15);
+        background-color: rgba(0,0,0,1);
         width: 100%;
         height: 720px;
+    }
+
+    &--loaded {
+        &::after {
+            background-color: rgba(0,0,0,0.15);
+            transition: background-color .3s linear;
+        }
     }
 
     &__video {
