Redoing hero layout.

--- a/dev/scss/helpers/_layout.scss
+++ b/dev/scss/helpers/_layout.scss
@@ -41,6 +41,10 @@
         justify-content: space-around;
     }
 
+    &--jc {
+        justify-content: center;
+    }
+
     /* child behaviors */
     &__block {
         display: block;
