--- a/dev/scss/components/_section.scss
+++ b/dev/scss/components/_section.scss
@@ -17,9 +17,53 @@ $grey-border: 1px solid #aaa;
         align-self: center;
         margin: 1rem 0;
     }
+}
 
-    &__header {
-        align-self: flex-start;
+.hero {
+    overflow: hidden;
+    position: relative;
+    background-size: cover;
+    height: 720px;
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(0,0,0,1);
+        width: 100%;
+        height: 720px;
+    }
+
+    &--loaded {
+        &::after {
+            background: url(../img/dark-matter.png) center repeat rgba(0,0,0,0.15);
+            transition: background .3s linear;
+        }
+    }
+
+    &__video {
+        width: 100%;
+        object-fit: cover;
+        background-size: cover;
+        transition: 1s opacity;
+    }
+
+    &__content {
+        width: 30%;
+        position: absolute;
+        z-index: 50;
+        top: 25%;
+        margin: 0 auto;
+        left: 0;
+        right: 0;
+
+        p {
+            color: #fff;
+            line-height: 1.75em;
+            font-weight: 200;
+            margin-bottom: 2rem;
+        }
     }
 }
 
