going to the dark side.

--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -70,7 +70,7 @@
 			height: 1rem;
 			visibility: hidden;
 			opacity: 0;
-			background-color: #9ad3de;
+			background-color: glacier(teal);
 			border-radius: 50%;
 			-webkit-transform: translateY(-200%);
 			transform: translateY(-200%);
