--- a/dev/scss/components/_section.scss
+++ b/dev/scss/components/_section.scss
@@ -12,7 +12,6 @@
     &__row {
         width: 100%;
         align-self: center;
-        padding: 1rem 0;
     }
 }
 
@@ -64,8 +63,12 @@
     }
 }
 
-.about {
-    background-color: glacier(grey);
+.intro {
+    background-color: glacier(navy);
+
+    &__subtitle {
+        @extend %commented-code;
+    }
 
     &__image {
         border-radius: 50%;
@@ -118,15 +121,55 @@
             margin-left: 2rem;
         }
     }
-
-    &__subtitle {
-        @extend %commented-code;
-    }
 }
 
 .work {
-    &__column {
+    &__pokeball {
+        &:hover {
+            animation: wiggle .3s linear 2;
+            transform-origin: 50% bottom;
+        };
+    };
 
+    @keyframes wiggle{
+        0% {
+            transform: rotate(3deg);
+        }
+        25% {
+            transform: rotate(5deg);
+        }
+        50% {
+            transform: rotate(-3deg);
+        }
+        100% {
+            transform: rotate(3deg);
+        }
+    };
+
+    &__filter {
+        @extend %flex-sa;
+    }
+
+    &__portfolio {
+        @extend %flex-sb;
+        flex-flow: row wrap;
+    }
+
+    &__card {
+        @extend %vcjc;
+        flex-flow: column;
+        margin: .5rem 0;
+        width: 25%;
+        height: 300px;
+        background-color: glacier(navy);
+    }
+
+    &__title {
+        color: glacier(teal);
+    }
+
+    &__img {
+        max-width: 100%;
     }
 }
 
