--- a/dev/scss/helpers/_constants.scss
+++ b/dev/scss/helpers/_constants.scss
@@ -7,6 +7,7 @@ $glacierColors: (
     yellow: rgba(#f7f09d, 1.0),
     green: rgba(#76ffcd, 1.0),
     grey: rgba(#0e151b, 1.0),
+    navy: rgba(#001221, 1.0),
 );
 
 $globalColors: (
